<resources>
    <string name="app_name">Developer Daily News</string>
    <string name="application_name">Developer Daily News</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_desc">Description</string>
    <string name="lbl_csdn">CSDN</string>
    <string name="lbl_techug">Techug</string>
    <string name="lbl_geek">Geek</string>
    <string name="lbl_pub_date">Publish-date</string>
    <string name="lbl_osc">OSChina</string>
    <string name="lbl_androider">Android Developer Blog</string>
    <string name="lbl_bookmark_list">Bookmarks</string>
    <string name="lbl_load_more">Loading more.</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>

    <string-array name="providers_list">
        <item>@string/lbl_androider</item>
        <item>@string/lbl_geek</item>
        <item>@string/lbl_techug</item>
        <item>@string/lbl_csdn</item>
        <item>@string/lbl_osc</item>
        <item>@string/lbl_bookmark_list</item>
    </string-array>
    
    <string name="msg_error">Error…</string>
    <string name="msg_added_bookmark">Added to bookmark-list.</string>
    <string name="msg_removed_bookmark">Removed from bookmark-list.</string>
    <string name="msg_load_config">Load application configuration…</string>


    <string name="btn_confirm">Confirm</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>

    <string name="action_open_site">Open site</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_mode">View mode</string>
    <string name="action_share">Share</string>
    <string name="action_fb_share">Post on Facebook</string>
    <string name="action_not_bookmarked">Not bookmarked</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_about">About</string>
    <string name="action_to_top">On top</string>
    <string name="action_forward">Forward</string>
    <string name="action_backward">Backward</string>

    <string name="lbl_store_url">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_share_app_title">A good App you should have: -%s-</string>
    <string name="lbl_share_app_content">Hello!\n\n\u00A0\u00A0\u00A0\u00A0As software developer you need best skill, however you should keep pace what happened in this industry. Use -%1$s- to know latest information of industry as soon as possible. \n\nDownload:%2$s</string>
    <string name="lbl_share_item_title">@string/application_name</string>
    <string name="lbl_share_item_content">%1$s\n%2$s\n\nDownload -%3$s-\n%4$s</string>


    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>
    <string name="play_service_url">market://details?id=com.google.android.gms</string>
    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>

    <string name="no_app_to_share">No app installed to share data of type %s!</string>
    <string name="no_share_type">No share type specified!</string>
    <string name="error_occurred">Sorry, an error occurred.</string>



    <string name="ad_unit_id">ca-app-pub-9133982521997162/9826688532</string>
    <string name="applicationId">979520732071920</string>
</resources>
